[package]

name = "tween"
version = "0.0.1"
authors = ["Till Hoeppner <till@hoeppner.ws>"]

[[bin]]
name = "basic"
path = "src/examples/basic.rs"

[[bin]]
name = "combination"
path = "src/examples/combination.rs"

[[bin]]
name = "multi"
path = "src/examples/multi.rs"

[[bin]]
name = "images"
path = "src/examples/images.rs"
